manifests/pod_with_service/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
    - image: docker.io/nginxinc/nginx-unprivileged
      name: test-container
      ports:
        - name: http
          containerPort: 8080
