manifests/pod_with_service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-pod
spec:
  ports:
  - port: 8080
    targetPort: http
