manifests/pod_with_service/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: test-pod
spec:
  to:
    kind: Service
    name: test-pod
  port:
    targetPort: 8080
